(library
 (public_name moonpool)
 (name moonpool)
 (private_modules d_pool_ dla_)
 (preprocess
  (action
   (run %{project_root}/src/cpp/cpp.exe %{input-file})))
 (libraries threads either
            (select thread_local_storage.ml from
             (thread-local-storage -> thread_local_storage.stub.ml)
             (-> thread_local_storage.real.ml))
            (select dla_.ml from
             (domain-local-await -> dla_.real.ml)
             ( -> dla_.dummy.ml))))
