(tests
 (names
  t_fib
  t_ws_pool_confusion
  t_bench1
  t_fib_rec
  t_futs1
  t_tree_futs
  t_props
  t_resource
  t_unfair
  t_ws_deque
  t_ws_wait)
 (package moonpool)
 (libraries
  moonpool
  qcheck-core
  qcheck-core.runner
  ;tracy-client.trace
  unix
  trace-tef
  trace))

(test
 (name t_ambient_context)
 (package moonpool)
 (enabled_if
  (and %{lib-available:ambient-context} %{lib-available:hmap}))
 (libraries moonpool moonpool.ambient-context ambient-context))

(test
 (name t_fib_await_mem)
 (package moonpool)
 (enabled_if
  (= %{system} linux))
 (libraries moonpool))
