(library
 (public_name moonpool)
 (name moonpool)
 (libraries
  moonpool.private
  (re_export thread-local-storage)
  moonpool.dpool
  (re_export exn_bt)
  (re_export picos))
 (flags :standard -open Moonpool_private)
 (private_modules util_pool_)
 (preprocess
  (action
   (run %{project_root}/src/cpp/cpp.exe %{input-file}))))
