(library
 (name moonpool_fib)
 (public_name moonpool.fib)
 (synopsis "Fibers and structured concurrency for Moonpool")
 (libraries moonpool picos
            (select hmap_fls.ml from
                    (hmap -> hmap_fls.real.ml)
                    (-> hmap_fls.dummy.ml)
                    ))
 (enabled_if
  (>= %{ocaml_version} 5.0))
 (flags :standard -open Moonpool_private -open Moonpool)
 (optional)
 (preprocess
  (action
   (run %{project_root}/src/cpp/cpp.exe %{input-file}))))
