(library
 (name moonpool_private)
 (public_name moonpool.private)
 (synopsis "Private internal utils for Moonpool (do not rely on)")
 (preprocess
  (action
   (run %{project_root}/src/cpp/cpp.exe %{input-file})))
 (libraries
  threads
  either
  (select
   tracing_.ml
   from
   (trace.core -> tracing_.real.ml)
   (-> tracing_.dummy.ml))))
