(tests
 (names
  t_fib1
  t_futs1
  t_many
  t_chan_train
  t_fib_fork_join
  t_fib_fork_join_all
  t_sort
  t_fork_join
  t_fork_join_heavy)
 (enabled_if
  (and
   (= %{system} "linux")
   (>= %{ocaml_version} 5.0)))
 (package moonpool)
 (libraries
  moonpool
  moonpool.forkjoin
  trace
  trace-tef
  qcheck-core
  qcheck-core.runner
  ;tracy-client.trace
  ))
